@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added Fl_Scroll::bbox() documentation (STR #1893)
 	- Removed an XForms compatibility "feature" that prevented the down
 	  array of Fl_Menu_Button from drawing (STR #2141).
 	- New helper class Fl_Watch to simplify safe handling of widget
